Создан главный экран и шапка сайта без адаптива

--- a/index.html
+++ b/index.html
@@ -9,5 +9,61 @@
 </head>
 <body>
     
+    <header class="header">
+        <div class="menu">
+            <div class="container">
+                <nav class="menu__nav">
+                    <a href="#" class="menu__link">Главная</a>
+                    <a href="#" class="menu__link">Продукция</a>
+                    <a href="#" class="menu__link">Примеры работ</a>
+                    <a href="#" class="menu__link">Примерка изображений</a>
+                    <a href="#" class="menu__link">Стоимость дилерам</a>
+                    <a href="#" class="menu__link">О скинали</a>
+                </nav>
+            </div>
+            <!-- /.container -->
+        </div>
+        <!-- /.menu -->
+        <div class="navbar">
+            <div class="container">
+                <div class="navbar-wrap">
+                    <button class="menu-button navbar__menu-button">
+                        <span class="menu-button__line"></span>
+                        <span class="menu-button__line"></span>
+                        <span class="menu-button__line"></span>
+                    </button>
+                    <div class="logo navbar__logo">
+                        <strong class="logo__text">Фабрика скинали №1</strong>
+                        <span class="logo__description">ведущий производитель скинали</span>
+                    </div>
+                    <!-- /.logo navbar__logo -->
+                    <div class="navbar__mobile">
+                        <a class="navbar__phone" href="tel:+380972741315">+38 097 274 13 15</a>
+                        <span class="navbar__work-time navbar__small-text">без выходных 9-21</span>
+                    </div>
+                    <div class="navbar__landline">
+                        <a class="navbar__phone" href="tel:+380972741315">+38 099 001 48 31</a>
+                        <a class="navbar__email navbar__small-text" href="mailto:prasalovaa@gmail.com">prasalovaa@gmail.com</a>
+                    </div>
+                    <button class="button-o navbar__button">Получить консультацию</button>
+                </div>
+                <!-- /.navbar-wrap -->
+            </div>
+            <!-- /.container -->
+        </div>
+        <!-- /.navbar -->
+        <div class="hero">
+            <div class="container">
+                <h1 class="hero__title">
+                    Гарантия <br>минимальной цены <br> на скинали
+                </h1>
+                <span class="hero__subtitle">от 3 000 р/м2</span>
+                <button class="button hero__button">Заказать скинали</button>
+            </div>
+            <!-- /.container -->
+        </div>
+        <!-- /.hero -->
+    </header>
+    <!-- /.header -->
 </body>
 </html>
