адаптив для главного экрана

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         <span class="logo__description">ведущий производитель скинали</span>
                     </div>
                     <!-- /.logo navbar__logo -->
-                    <div class="navbar__mobile">
+                    <div class="navbar_mobile">
                         <a class="navbar__phone" href="tel:+380972741315">+38 097 274 13 15</a>
                         <span class="navbar__work-time navbar__small-text">без выходных 9-21</span>
                     </div>
