подключение виджета spikmi

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                 <nav class="menu__nav">
                     <a href="#" class="menu__link">Главная</a>
                     <a href="#" class="menu__link">Продукция</a>
+                    <a href="#" class="menu__link">Каталог</a>
                     <a href="#" class="menu__link">Примеры работ</a>
                     <a href="#" class="menu__link">Примерка изображений</a>
                     <a href="#" class="menu__link">Стоимость дилерам</a>
@@ -66,4 +67,7 @@
     </header>
     <!-- /.header -->
 </body>
+
+<!-- Подключение виджета обратной связи через соцсети -->
+<script type="text/javascript" src="https://spikmi.com/Widget?Id=6911"></script>
 </html>
