--- a/index.html
+++ b/index.html
@@ -66,8 +66,66 @@
         <!-- /.hero -->
     </header>
     <!-- /.header -->
+
+
+    <main>
+        <section class="offer bg-secondary">
+            <div class="container">
+                <div class="offer__block offer-block">
+                    <h2 class="offer__title">Оставьте заявку на расчёт</h2>
+                    <span class="offet__subtitle">и получите скидку 30%</span>
+                    <form action="#" class="form offer__form">
+                        <div class="form__row">
+                            <div class="form__group">
+                                <label for="" class="form__label">Вид стекла</label>
+                                <input type="text" class="input form__input">
+                            </div>
+                            <div class="form__group">
+                                <label for="" class="form__label">Ширина, см</label>
+                                <input type="text" class="input form__input">
+                            </div>
+                            <div class="form__group">
+                                <label for="" class="form__label">Высота, см</label>
+                                <input type="text" class="input form__input">
+                            </div>
+                        </div>
+                        <div class="form__row form__row-checkbox">
+                            <div class="form__checkbox">
+                                <input class="checkbox" type="checkbox" id="install">
+                                <label class="checkbox-label" for="install">
+                                    Монтаж
+                                </label>
+                            </div>
+                            <div class="form__checkbox">
+                                <input class="checkbox" type="checkbox" id="delivery">
+                                <label class="checkbox-label" for="delivery">
+                                    Доставка
+                                </label>
+                            </div>
+                        </div>
+                        <!-- /.form__row -->
+                        <div class="form__row">
+                            <div class="form__group">
+                                <input type="text" class="form__input input" placeholder="Ваше имя">
+                            </div>
+                            <div class="form__group">
+                                <input type="tel" class="form__input input" placeholder="Ваш телефон">
+                            </div>
+                            <div class="form__group">
+                                <input type="submit" class="button form_button" value="Получить скидку">
+                            </div>
+                        </div>
+                    </form>
+                </div>
+                <!-- /.offer__block offer-block -->
+            </div>
+            <!-- /.container -->
+        </section>
+        <!-- /.offer -->
+    </main>
+ 
+    <!-- Подключение виджета обратной связи через соцсети -->
+<script type="text/javascript" src="https://spikmi.com/Widget?Id=6911"></script>
 </body>
 
-<!-- Подключение виджета обратной связи через соцсети -->
-<script type="text/javascript" src="https://spikmi.com/Widget?Id=6911"></script>
 </html>
