Свёрстан блок с преимуществами. Сделан адаптив

--- a/index.html
+++ b/index.html
@@ -122,6 +122,52 @@
             <!-- /.container -->
         </section>
         <!-- /.offer -->
+      <section class="features section">
+          <div class="container">
+              <h2 class="section-title section__title">Наши преимущества</h2>
+              <div class="features-block">
+                  <div class="features-block__item">
+                      <img src="img/features/feature-1.png" alt="Бесплатный дизайн-макет" class="features-block__image">
+                      <p class="feature-block__text">Бесплатный <br> дизайн-макет</p>
+                      <!-- /.feature-block__text -->
+                  </div>
+                  <!-- /.feature-block__item -->
+                  <div class="features-block__item">
+                      <img src="img/features/feature-2.png" alt="Пожизненная гарантия" class="features-block__image">
+                      <p class="feature-block__text">Пожизненная <br> гарантия</p>
+                      <!-- /.feature-block__text -->
+                  </div>
+                  <!-- /.feature-block__item -->
+                  <div class="features-block__item">
+                      <img src="img/features/feature-3.png" alt="Большой каталог изображений" class="features-block__image">
+                      <p class="feature-block__text">Большой каталог <br> изображений</p>
+                      <!-- /.feature-block__text -->
+                  </div>
+                  <!-- /.feature-block__item -->
+                  <div class="features-block__item">
+                      <img src="img/features/feature-4.png" alt="100% соблюдение сроков" class="features-block__image">
+                      <p class="feature-block__text">100% соблюдение <br> сроков</p>
+                      <!-- /.feature-block__text -->
+                  </div>
+                  <!-- /.feature-block__item -->
+                  <div class="features-block__item">
+                      <img src="img/features/feature-5.png" alt="Собственное производство" class="features-block__image">
+                      <p class="feature-block__text">Собственное <br> производство</p>
+                      <!-- /.feature-block__text -->
+                  </div>
+                  <!-- /.feature-block__item -->
+                  <div class="features-block__item">
+                      <img src="img/features/feature-6.png" alt="Минимальная цена" class="features-block__image">
+                      <p class="feature-block__text">Минимальная <br> цена</p>
+                      <!-- /.feature-block__text -->
+                  </div>
+                  <!-- /.feature-block__item -->
+              </div>
+              <!-- /.features-block -->
+          </div>
+          <!-- /.container -->
+      </section>
+      <!-- /.features section -->
     </main>
  
     <!-- Подключение виджета обратной связи через соцсети -->
