--- a/index.html
+++ b/index.html
@@ -168,6 +168,165 @@
           <!-- /.container -->
       </section>
       <!-- /.features section -->
+      <section class="section catalog">
+          <div class="container">
+              <h2 class="section-title section__title">Каталог скинали</h2>
+              <div class="catalog-block">
+                  <div class="catalog-card catalog__card">
+                      <img class="catalog-card__image" src="img/catalog/catalog-image-1.jpg" alt=" ">
+                      <span class="catalog-card__tag">Коллажи</span>
+                      <!-- /.catalog-card__tag -->
+                      <div class="catalog-card__buttons"><button class="button-fitting catalog-card__button">Примерить онлайн</button>
+                          <!-- /.button-fitting catalog-card__button --><button class="button-add catalog-card__button">Заказать</button>
+                          <!-- /.button-add catalog-card__button --><button class="button-like"><img src="img/like.png" alt=""></button>
+                          <!-- /.button-like --></div>
+                      <!-- /.catalog-card__buttons -->
+                  </div>
+                  <!-- /.catalog-card -->
+                  <div class="catalog-card catalog__card">
+                      <img class="catalog-card__image" src="img/catalog/catalog-image-2.jpg" alt="">
+                      <span class="catalog-card__tag">Авторская коллекция</span>
+                      <!-- /.catalog-card__tag -->
+                      <div class="catalog-card__buttons"><button class="button-fitting catalog-card__button">Примерить онлайн</button>
+                          <!-- /.button-fitting catalog-card__button --><button class="button-add catalog-card__button">Заказать</button>
+                          <!-- /.button-add catalog-card__button --><button class="button-like"><img src="img/like.png" alt=""></button>
+                          <!-- /.button-like --></div>
+                      <!-- /.catalog-card__buttons -->
+                  </div>
+                  <!-- /.catalog-card -->
+                  <div class="catalog-card catalog__card">
+                      <img class="catalog-card__image" src="img/catalog/catalog-image-3.jpg" alt="">
+                      <span class="catalog-card__tag">Коллажи</span>
+                      <!-- /.catalog-card__tag -->
+                      <div class="catalog-card__buttons"><button class="button-fitting catalog-card__button">Примерить онлайн</button>
+                          <!-- /.button-fitting catalog-card__button --><button class="button-add catalog-card__button">Заказать</button>
+                          <!-- /.button-add catalog-card__button --><button class="button-like"><img src="img/like.png" alt=""></button>
+                          <!-- /.button-like --></div>
+                      <!-- /.catalog-card__buttons -->
+                  </div>
+                  <!-- /.catalog-card -->
+                  <div class="catalog-card catalog__card">
+                      <img class="catalog-card__image" src="img/catalog/catalog-image-4.jpg" alt="">
+                      <span class="catalog-card__tag">Авторская коллекция</span>
+                      <!-- /.catalog-card__tag -->
+                      <div class="catalog-card__buttons"><button class="button-fitting catalog-card__button">Примерить онлайн</button>
+                          <!-- /.button-fitting catalog-card__button --><button class="button-add catalog-card__button">Заказать</button>
+                          <!-- /.button-add catalog-card__button --><button class="button-like"><img src="img/like.png" alt=""></button>
+                          <!-- /.button-like --></div>
+                      <!-- /.catalog-card__buttons -->
+                  </div>
+                  <!-- /.catalog-card -->
+                  <div class="catalog-card catalog__card">
+                      <img class="catalog-card__image" src="img/catalog/catalog-image-5.jpg" alt="">
+                      <span class="catalog-card__tag">Коллажи</span>
+                      <!-- /.catalog-card__tag -->
+                      <div class="catalog-card__buttons"><button class="button-fitting catalog-card__button">Примерить онлайн</button>
+                          <!-- /.button-fitting catalog-card__button --><button class="button-add catalog-card__button">Заказать</button>
+                          <!-- /.button-add catalog-card__button --><button class="button-like"><img src="img/like.png" alt=""></button>
+                          <!-- /.button-like --></div>
+                      <!-- /.catalog-card__buttons -->
+                  </div>
+                  <!-- /.catalog-card -->
+                  <div class="catalog-card catalog__card">
+                      <img class="catalog-card__image" src="img/catalog/catalog-image-6.jpg" alt="">
+                      <span class="catalog-card__tag">Абстракция</span>
+                      <!-- /.catalog-card__tag -->
+                      <div class="catalog-card__buttons"><button class="button-fitting catalog-card__button">Примерить онлайн</button>
+                          <!-- /.button-fitting catalog-card__button --><button class="button-add catalog-card__button">Заказать</button>
+                          <!-- /.button-add catalog-card__button --><button class="button-like"><img src="img/like.png" alt=""></button>
+                          <!-- /.button-like --></div>
+                      <!-- /.catalog-card__buttons -->
+                  </div>
+                  <!-- /.catalog-card -->
+                  <div class="catalog-card catalog__card">
+                      <img class="catalog-card__image" src="img/catalog/catalog-image-7.jpg" alt="">
+                      <span class="catalog-card__tag">Коллажи</span>
+                      <!-- /.catalog-card__tag -->
+                      <div class="catalog-card__buttons"><button class="button-fitting catalog-card__button">Примерить онлайн</button>
+                          <!-- /.button-fitting catalog-card__button --><button class="button-add catalog-card__button">Заказать</button>
+                          <!-- /.button-add catalog-card__button --><button class="button-like"><img src="img/like.png" alt=""></button>
+                          <!-- /.button-like --></div>
+                      <!-- /.catalog-card__buttons -->
+                  </div>
+                  <!-- /.catalog-card -->
+                  <div class="catalog-card catalog__card">
+                      <img class="catalog-card__image" src="img/catalog/catalog-image-8.jpg" alt="">
+                      <span class="catalog-card__tag">Абстракция</span>
+                      <!-- /.catalog-card__tag -->
+                      <div class="catalog-card__buttons"><button class="button-fitting catalog-card__button">Примерить онлайн</button>
+                          <!-- /.button-fitting catalog-card__button --><button class="button-add catalog-card__button">Заказать</button>
+                          <!-- /.button-add catalog-card__button --><button class="button-like"><img src="img/like.png" alt=""></button>
+                          <!-- /.button-like --></div>
+                      <!-- /.catalog-card__buttons -->
+                  </div>
+                  <!-- /.catalog-card -->
+              </div>
+              <!-- /.catalog-block -->
+            <div class="catalog__link">
+              <a href="#" class="button catalog__link-more button_lg">Смотреть весь каталог скинали</a>
+              <span class="catalog__description">Более 3000 изображений скинали в 25 рубриках</span>
+            </div>
+          </div>
+          <!-- /.container -->
+      </section>
+      <!-- /.section catalog -->
+      <section class="section blog">
+          <div class="container">
+              <div class="blog__heading">
+                <h3 class="blog__title">Полезное или что важно знать о скинали</h3>
+                <a href="#" class="blog__link-more">Читать все статьи</a>
+              </div>
+              <div class="blog-list">
+                  <div class="blog-card blog-list__card">
+                      <div class="blog-list__image">
+                          <img src="img/block-list/blog-post-1.jpg" alt="">
+                      </div>
+                      <!-- /.blog-list__image -->
+                      <div class="blog-list__text">
+                          Виды стекла
+                      </div>
+                      <!-- /.blog-list__text -->
+                  </div>
+                  <!-- /.blog-card blog-list__card -->
+                  <div class="blog-card blog-list__card">
+                      <div class="blog-list__image">
+                        <img src="img/block-list/blog-post-2.jpg" alt="">
+                      </div>
+                      <!-- /.blog-list__image -->
+                      <div class="blog-list__text">
+                          Виды печати
+                      </div>
+                      <!-- /.blog-list__text -->
+                  </div>
+                  <!-- /.blog-card blog-list__card -->
+                  <div class="blog-card blog-list__card">
+                      <div class="blog-list__image">
+                        <img src="img/block-list/blog-post-3.jpg" alt="">
+                      </div>
+                      <!-- /.blog-list__image -->
+                      <div class="blog-list__text">
+                          Виды крепежа и монтажа
+                      </div>
+                      <!-- /.blog-list__text -->
+                  </div>
+                  <!-- /.blog-card blog-list__card -->
+                  <div class="blog-card blog-list__card">
+                      <div class="blog-list__image">
+                        <img src="img/block-list/blog-post-4.jpg" alt="">
+                      </div>
+                      <!-- /.blog-list__image -->
+                      <div class="blog-list__text">
+                          Вопрос - ответы
+                      </div>
+                      <!-- /.blog-list__text -->
+                  </div>
+                  <!-- /.blog-card blog-list__card -->
+              </div>
+              <!-- /.blog-list -->
+          </div>
+          <!-- /.container -->
+      </section>
+      <!-- /.section blog -->
     </main>
  
     <!-- Подключение виджета обратной связи через соцсети -->
