--- a/index.html
+++ b/index.html
@@ -327,6 +327,97 @@
           <!-- /.container -->
       </section>
       <!-- /.section blog -->
+
+      <section class="section price">
+          <div class="container">
+              <h2 class="section-title section__title">Цены и виды скинали</h2>
+              <!-- /.section-title section__title -->
+              <div class="price-block">
+                  <div class="price-card price-block__card">
+                      <div class="price-card__image"><img src="img/price/price-1.jpg" alt=""></div>
+                      <div class="price-card__text">
+                          <div class="price-card__pricetag">
+                              <h4 class="price-card__title">Прозрачные</h4>
+                              <span class="price-card__cost">от 3500 р/м2</span>
+                          </div>
+                          <div class="price-card__button"><button class="button">Оставить заявку</button></div>
+                      </div>
+                  </div>
+                  <div class="price-card price-block__card">
+                      <div class="price-card__image"><img src="img/price/price-2.jpg" alt=""></div>
+                      <div class="price-card__text">
+                          <div class="price-card__pricetag">
+                              <h4 class="price-card__title">Однотонные</h4>
+                              <span class="price-card__cost">от 3500 р/м2</span>
+                          </div>
+                          <div class="price-card__button"><button class="button">Оставить заявку</button></div>
+                      </div>
+                  </div>
+                  <div class="price-card price-block__card">
+                      <div class="price-card__image"><img src="img/price/price-3.jpg" alt=""></div>
+                      <div class="price-card__text">
+                          <div class="price-card__pricetag">
+                              <h4 class="price-card__title">Полноцветные</h4>
+                              <span class="price-card__cost">от 3500 р/м2</span>
+                          </div>
+                          <div class="price-card__button"><button class="button">Оставить заявку</button></div>
+                      </div>
+                  </div>
+                  <div class="price-card price-block__card">
+                      <div class="price-card__image"><img src="img/price/price-4.jpg" alt=""></div>
+                      <div class="price-card__text">
+                          <div class="price-card__pricetag">
+                              <h4 class="price-card__title">Стекло</h4>
+                              <span class="price-card__cost">от 3500 р/м2</span>
+                          </div>
+                          <div class="price-card__button"><button class="button">Оставить заявку</button></div>
+                      </div>
+                  </div>
+                  <div class="price-card price-block__card">
+                      <div class="price-card__image"><img src="img/price/price-5.jpg" alt=""></div>
+                      <div class="price-card__text">
+                          <div class="price-card__pricetag">
+                              <h4 class="price-card__title">Зеркальные</h4>
+                              <span class="price-card__cost">от 3500 р/м2</span>
+                          </div>
+                          <div class="price-card__button"><button class="button">Оставить заявку</button></div>
+                      </div>
+                  </div>
+                  <div class="price-card price-block__card">
+                      <div class="price-card__image"><img src="img/price/price-6.jpg" alt=""></div>
+                      <div class="price-card__text">
+                          <div class="price-card__pricetag">
+                              <h4 class="price-card__title">С подсветкой</h4>
+                              <span class="price-card__cost">от 3500 р/м2</span>
+                          </div>
+                          <div class="price-card__button"><button class="button">Оставить заявку</button></div>
+                      </div>
+                  </div>
+                  <div class="price-card price-block__card">
+                      <div class="price-card__image"><img src="img/price/price-7.jpg" alt=""></div>
+                      <div class="price-card__text">
+                          <div class="price-card__pricetag">
+                              <h4 class="price-card__title">Световые панели</h4>
+                              <span class="price-card__cost">от 3500 р/м2</span>
+                          </div>
+                          <div class="price-card__button"><button class="button">Оставить заявку</button></div>
+                      </div>
+                  </div>
+                  <div class="price-card price-block__card">
+                      <div class="price-card__image"><img src="img/price/price-8.jpg" alt=""></div>
+                      <div class="price-card__text">
+                          <div class="price-card__pricetag">
+                              <h4 class="price-card__title">Панно, картины</h4>
+                              <span class="price-card__cost">от 3500 р/м2</span>
+                          </div>
+                          <div class="price-card__button"><button class="button">Оставить заявку</button></div>
+                      </div>
+                  </div>
+              </div>
+          </div>
+          <!-- /.container -->
+      </section>
+      <!-- /.section price -->
     </main>
  
     <!-- Подключение виджета обратной связи через соцсети -->
