--- a/index.html
+++ b/index.html
@@ -418,6 +418,68 @@
           <!-- /.container -->
       </section>
       <!-- /.section price -->
+
+      <section class="section steps">
+          <div class="container">
+              <h2 class="section-title section__title">
+                  Этапы работ
+              </h2>
+              <!-- /.section-title section__title -->
+              <div class="steps-block">
+                  <div class="step">
+                      <img src="img/steps/step-1.png" alt="" class="step__image">
+                      <h4 class="step__title">Заявка</h4>
+                      <!-- /.step__title -->
+                      <p class="step__text">Вы оставляете заявку на нашем сайте или по телефону</p>
+                      <!-- /.step__text -->
+                  </div>
+                  <!-- /.step -->
+                  <div class="step">
+                      <img src="img/steps/step-2.png" alt="" class="step__image">
+                      <h4 class="step__title">Замер</h4>
+                      <!-- /.step__title -->
+                      <p class="step__text">Вы производите ваш замер сам или наш сотрудник выезжает к вам</p>
+                      <!-- /.step__text -->
+                  </div>
+                  <!-- /.step -->
+                  <div class="step">
+                      <img src="img/steps/step-3.png" alt="" class="step__image">
+                      <h4 class="step__title">Договор</h4>
+                      <!-- /.step__title -->
+                      <p class="step__text">Вы оставляете заявку на нашем сайте или по телефону</p>
+                      <!-- /.step__text -->
+                  </div>
+                  <!-- /.step -->
+                  <div class="step">
+                      <img src="img/steps/step-4.png" alt="" class="step__image">
+                      <h4 class="step__title">Дизайн</h4>
+                      <!-- /.step__title -->
+                      <p class="step__text">Вы оставляете заявку на нашем сайте или по телефону</p>
+                      <!-- /.step__text -->
+                  </div>
+                  <!-- /.step -->
+                  <div class="step">
+                      <img src="img/steps/step-5.png" alt="" class="step__image">
+                      <h4 class="step__title">Производство</h4>
+                      <!-- /.step__title -->
+                      <p class="step__text">Вы оставляете заявку на нашем сайте или по телефону</p>
+                      <!-- /.step__text -->
+                  </div>
+                  <!-- /.step -->
+                  <div class="step">
+                      <img src="img/steps/step-6.png" alt="" class="step__image">
+                      <h4 class="step__title">Монтаж</h4>
+                      <!-- /.step__title -->
+                      <p class="step__text">Вы оставляете заявку на нашем сайте или по телефону</p>
+                      <!-- /.step__text -->
+                  </div>
+                  <!-- /.step -->
+              </div>
+              <!-- /.steps-block -->
+          </div>
+          <!-- /.container -->
+      </section>
+      <!-- /.section steps -->
     </main>
  
     <!-- Подключение виджета обратной связи через соцсети -->
