Свёрстан блок с отзывами без адаптива

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <main>
         <section class="offer bg-secondary">
             <div class="container">
-                <div class="offer__block offer-block">
+                <div class="offer__block offer-block offer-block_calc-bg">
                     <h2 class="offer__title">Оставьте заявку на расчёт</h2>
                     <span class="offet__subtitle">и получите скидку 30%</span>
                     <form action="#" class="form offer__form">
@@ -480,6 +480,112 @@
           <!-- /.container -->
       </section>
       <!-- /.section steps -->
+
+      <section class="section reviews">
+          <div class="container">
+              <h2 class="section-title section__title">
+                  Отзывы наших клиентов
+              </h2>
+              <!-- /.section-title section__title -->
+              <div class="reviews-slider">
+                  <div class="reviews-slider__item">
+                      <div class="reviews-slider__text">
+                          Очень часто мы сталкиваемся с недопонимаем со стороны сотрудников банка...
+                      </div>
+                      <!-- /.reviews-slider__text -->
+                      <img src="img/reviews/review-1.png" alt="" class="reviews-slider__image">
+                      <span class="reviews-slider__name">Екатерина Иванова  <br>Москва</span>
+                      <!-- /.reviews-slider__name -->
+                    </div>
+                  <!-- /.reviews-slider__item -->
+                  <div class="reviews-slider__item">
+                    <div class="reviews-slider__text">
+                        Очень часто мы сталкиваемся с недопонимаем со стороны сотрудников банка...
+                    </div>
+                    <!-- /.reviews-slider__text -->
+                    <img src="img/reviews/review-2.png" alt="" class="reviews-slider__image">
+                    <span class="reviews-slider__name">Екатерина Иванова  <br>Москва</span>
+                    <!-- /.reviews-slider__name -->
+                  </div>
+                <!-- /.reviews-slider__item -->
+                <div class="reviews-slider__item">
+                    <div class="reviews-slider__text">
+                        Очень часто мы сталкиваемся с недопонимаем со стороны сотрудников банка...
+                    </div>
+                    <!-- /.reviews-slider__text -->
+                    <img src="img/reviews/review-3.png" alt="" class="reviews-slider__image">
+                    <span class="reviews-slider__name">Екатерина Иванова  <br>Москва</span>
+                    <!-- /.reviews-slider__name -->
+                  </div>
+                <!-- /.reviews-slider__item -->
+              </div>
+              <!-- /.reviews-slider -->
+          </div>
+          <!-- /.container -->
+      </section>
+      <!-- /.section reviews -->
+      <section class="offer">
+        <div class="container">
+            <div class="offer__block offer-block offer-block_price-bg">
+                <h2 class="offer__title">Ищите где дешевле и лучше?</h2>
+                <span class="offet__subtitle">Если у Вас уже есть расчёт от другой фирмы, но Вы хотите цену дешевле, укажите её
+                и мы Вам пересчитаем с максимальной скидкой</span>
+                <form action="#" class="form offer__form">
+                    <div class="form__row">
+                        <div class="form__group">
+                            <input type="text" class="input form__input" placeholder="Ваше имя">
+                        </div>
+                        <div class="form__group">
+                            <input type="text" class="input form__input" placeholder="Ваш телефон">
+                        </div>
+                        <div class="form__group">
+                            <input type="text" class="input form__input" placeholder="Ваша цена">
+                        </div>
+                    </div>
+                    <div class="form__row">
+                        <div class="form__group">
+                            <input type="submit" class="button form_button form__button-price" value="Получить расчёт со скидкой">
+                        </div>
+                        <div class="form__group">
+                            <span class="form__policy">Ваши данные надёжно защищены. Отправление заявки ни к чему не обязывает</span>
+                        </div>
+                    </div>
+                </form>
+            </div>
+            <!-- /.offer__block offer-block -->
+        </div>
+        <!-- /.container -->
+    </section>
+    <!-- /.offer -->
+
+    <section class="section factory">
+        <div class="container">
+            <h2 class="section-title section__title">
+                О производстве
+            </h2>
+            <!-- /.section-title section__title -->
+            <div class="factory-block">
+                <div class="factory-block__image">
+                    <img src="img/factory/factory-image.png" alt="">
+                </div>
+                <!-- /.factory-block__image -->
+                <div class="factory-block__text">
+                    <p>To advertise means to make information public. But nowadays advertising doesn’t limit itself by a word ‘publicity’. 
+                    Modern advertising has a task to show a product in a positive and pleasant way. 
+                    It has an aim to make us want to buy it. But how and when did advertising appear?                    
+                    </p>
+                    <p>To advertise means to make information public. But nowadays advertising doesn’t limit itself by a word ‘publicity’. 
+                    Modern advertising has a task to show a product in a positive and pleasant way. 
+                    It has an aim to make us want to buy it. But how and when did advertising appear?
+                    </p>
+                </div>
+                <!-- /.factory-block__text -->
+            </div>
+            <!-- /.factory-block -->
+        </div>
+        <!-- /.container -->
+    </section>
+    <!-- /.section factory -->
     </main>
  
     <!-- Подключение виджета обратной связи через соцсети -->
