Свёрстан блок с контактами

--- a/index.html
+++ b/index.html
@@ -586,6 +586,41 @@
         <!-- /.container -->
     </section>
     <!-- /.section factory -->
+    <section class="section contacts">
+        <div class="container">
+            <div class="h2 section-title section__title">
+                Контакты
+            </div>
+            <!-- /.h2 section-title section__title -->
+            <div class="contacts-block">
+                <div class="contacts-block__item">
+                    <img src="/img/contacts/phone.png" alt="" class="contacts__image">
+                    <div class="contacts__text">
+                        <a href="#" class="contacts__link">+380 97 274 13 15</a>
+                    </div>
+                    <!-- /.contacts__text -->
+                </div>
+                <!-- /.contacts-block__item -->
+                <div class="contacts-block__item">
+                    <img src="/img/contacts/map.png" alt="" class="contacts__image">
+                    <div class="contacts__text">
+                        <address class="contacts__address">Каширинское шоссе, д. 23, офис 345</address>
+                    </div>
+                    <!-- /.contacts__text -->
+                </div>
+                <!-- /.contacts-block__item -->
+                <div class="contacts-block__item">
+                    <img src="/img/contacts/message.png" alt="" class="contacts__image">
+                    <div class="contacts__text">prasalovaa@gmail.com</div>
+                    <!-- /.contacts__text -->
+                </div>
+                <!-- /.contacts-block__item -->
+            </div>
+            <!-- /.contacts-block -->
+        </div>
+        <!-- /.container -->
+    </section>
+    <!-- /.section contacts -->
     </main>
  
     <!-- Подключение виджета обратной связи через соцсети -->
