Свёрстан блок с контактами

--- a/index.html
+++ b/index.html
@@ -525,106 +525,106 @@
       </section>
       <!-- /.section reviews -->
       <section class="offer">
-        <div class="container">
-            <div class="offer__block offer-block offer-block_price-bg">
-                <h2 class="offer__title">Ищите где дешевле и лучше?</h2>
-                <span class="offet__subtitle">Если у Вас уже есть расчёт от другой фирмы, но Вы хотите цену дешевле, укажите её
-                и мы Вам пересчитаем с максимальной скидкой</span>
-                <form action="#" class="form offer__form">
-                    <div class="form__row">
-                        <div class="form__group">
-                            <input type="text" class="input form__input" placeholder="Ваше имя">
+          <div class="container">
+              <div class="offer__block offer-block offer-block_price-bg">
+                  <h2 class="offer__title">Ищите где дешевле и лучше?</h2>
+                  <span class="offet__subtitle">Если у Вас уже есть расчёт от другой фирмы, но Вы хотите цену дешевле, укажите её
+                    и мы Вам пересчитаем с максимальной скидкой</span>
+                    <form action="#" class="form offer__form">
+                        <div class="form__row">
+                            <div class="form__group">
+                                <input type="text" class="input form__input" placeholder="Ваше имя">
+                            </div>
+                            <div class="form__group">
+                                <input type="text" class="input form__input" placeholder="Ваш телефон">
+                            </div>
+                            <div class="form__group">
+                                <input type="text" class="input form__input" placeholder="Ваша цена">
+                            </div>
                         </div>
-                        <div class="form__group">
-                            <input type="text" class="input form__input" placeholder="Ваш телефон">
+                        <div class="form__row">
+                            <div class="form__group">
+                                <input type="submit" class="button form_button form__button-price" value="Получить расчёт со скидкой">
+                            </div>
+                            <div class="form__group">
+                                <span class="form__policy">Ваши данные надёжно защищены. Отправление заявки ни к чему не обязывает</span>
+                            </div>
                         </div>
-                        <div class="form__group">
-                            <input type="text" class="input form__input" placeholder="Ваша цена">
-                        </div>
-                    </div>
-                    <div class="form__row">
-                        <div class="form__group">
-                            <input type="submit" class="button form_button form__button-price" value="Получить расчёт со скидкой">
-                        </div>
-                        <div class="form__group">
-                            <span class="form__policy">Ваши данные надёжно защищены. Отправление заявки ни к чему не обязывает</span>
-                        </div>
-                    </div>
-                </form>
+                    </form>
+                </div>
+                <!-- /.offer__block offer-block -->
             </div>
-            <!-- /.offer__block offer-block -->
-        </div>
-        <!-- /.container -->
-    </section>
-    <!-- /.offer -->
+            <!-- /.container -->
+        </section>
+        <!-- /.offer -->
 
-    <section class="section factory">
-        <div class="container">
-            <h2 class="section-title section__title">
-                О производстве
-            </h2>
-            <!-- /.section-title section__title -->
-            <div class="factory-block">
-                <div class="factory-block__image">
-                    <img src="img/factory/factory-image.png" alt="">
-                </div>
-                <!-- /.factory-block__image -->
-                <div class="factory-block__text">
-                    <p>To advertise means to make information public. But nowadays advertising doesn’t limit itself by a word ‘publicity’. 
-                    Modern advertising has a task to show a product in a positive and pleasant way. 
-                    It has an aim to make us want to buy it. But how and when did advertising appear?                    
-                    </p>
-                    <p>To advertise means to make information public. But nowadays advertising doesn’t limit itself by a word ‘publicity’. 
-                    Modern advertising has a task to show a product in a positive and pleasant way. 
-                    It has an aim to make us want to buy it. But how and when did advertising appear?
-                    </p>
-                </div>
-                <!-- /.factory-block__text -->
-            </div>
-            <!-- /.factory-block -->
-        </div>
-        <!-- /.container -->
-    </section>
-    <!-- /.section factory -->
-    <section class="section contacts">
-        <div class="container">
-            <div class="h2 section-title section__title">
-                Контакты
-            </div>
-            <!-- /.h2 section-title section__title -->
-            <div class="contacts-block">
-                <div class="contacts-block__item">
-                    <img src="/img/contacts/phone.png" alt="" class="contacts__image">
-                    <div class="contacts__text">
-                        <a href="#" class="contacts__link">+380 97 274 13 15</a>
+        <section class="section factory">
+            <div class="container">
+                <h2 class="section-title section__title">
+                    О производстве
+                </h2>
+                <!-- /.section-title section__title -->
+                <div class="factory-block">
+                    <div class="factory-block__image">
+                        <img src="img/factory/factory-image.png" alt="">
                     </div>
-                    <!-- /.contacts__text -->
-                </div>
-                <!-- /.contacts-block__item -->
-                <div class="contacts-block__item">
-                    <img src="/img/contacts/map.png" alt="" class="contacts__image">
-                    <div class="contacts__text">
-                        <address class="contacts__address">Каширинское шоссе, д. 23, офис 345</address>
+                    <!-- /.factory-block__image -->
+                    <div class="factory-block__text">
+                        <p>To advertise means to make information public. But nowadays advertising doesn’t limit itself by a word ‘publicity’. 
+                        Modern advertising has a task to show a product in a positive and pleasant way. 
+                        It has an aim to make us want to buy it. But how and when did advertising appear?                    
+                        </p>
+                        <p>To advertise means to make information public. But nowadays advertising doesn’t limit itself by a word ‘publicity’. 
+                        Modern advertising has a task to show a product in a positive and pleasant way. 
+                        It has an aim to make us want to buy it. But how and when did advertising appear?
+                        </p>
                     </div>
-                    <!-- /.contacts__text -->
+                    <!-- /.factory-block__text -->
                 </div>
-                <!-- /.contacts-block__item -->
-                <div class="contacts-block__item">
-                    <img src="/img/contacts/message.png" alt="" class="contacts__image">
-                    <div class="contacts__text">prasalovaa@gmail.com</div>
-                    <!-- /.contacts__text -->
-                </div>
-                <!-- /.contacts-block__item -->
+                <!-- /.factory-block -->
             </div>
-            <!-- /.contacts-block -->
-        </div>
-        <!-- /.container -->
-    </section>
-    <!-- /.section contacts -->
+            <!-- /.container -->
+        </section>
+        <!-- /.section factory -->
+        <section class="section contacts">
+            <div class="container">
+                <div class="h2 section-title section__title">Контакты</div>
+                <!-- /.h2 section-title section__title -->
+                <div class="contacts-block">
+                    <div class="contacts-block__item">
+                        <img src="img/contacts/phone.png" alt="" class="contacts__image">
+                        <div class="contacts__text">
+                            <a href="#" class="contacts__link">+380 97 274 13 15</a>
+                        </div>
+                        <!-- /.contacts__text -->
+                    </div>
+                    <!-- /.contacts-block__item -->
+                    <div class="contacts-block__item">
+                        <img src="img/contacts/map.png" alt="" class="contacts__image">
+                        <div class="contacts__text">
+                            <address class="contacts__address">Каширинсое шоссе, д.23, офис 1</address>
+                        </div>
+                        <!-- /.contacts__text -->
+                    </div>
+                    <!-- /.contacts-block__item -->
+                    <div class="contacts-block__item">
+                        <img src="img/contacts/message.png" alt="" class="contacts__image">
+                        <div class="contacts__text">
+                            <a href="#" class="contacts__link">prasalovaa@gmail.com</a>
+                        </div>
+                        <!-- /.contacts__text -->
+                    </div>
+                    <!-- /.contacts-block__item -->
+                </div>
+                <!-- /.contacts-block -->
+            </div>
+            <!-- /.container -->
+        </section>
+        <!-- /.section contacts -->
     </main>
  
     <!-- Подключение виджета обратной связи через соцсети -->
-<script type="text/javascript" src="https://spikmi.com/Widget?Id=6911"></script>
+    <script type="text/javascript" src="https://spikmi.com/Widget?Id=6911"></script>
 </body>
 
 </html>
