Свёрстан блок с картой

--- a/index.html
+++ b/index.html
@@ -621,6 +621,9 @@
             <!-- /.container -->
         </section>
         <!-- /.section contacts -->
+        <div class="map" id="map">
+            <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A8a8bf78eb79678ba4e39f4dfef4408bccd6b730bf71404b73e7b31bd0914db47&amp;width=100%25&amp;height=410&amp;lang=ru_UA&amp;scroll=false"></script>
+        </div>
     </main>
  
     <!-- Подключение виджета обратной связи через соцсети -->
